config/samples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: supersite
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / # cause /metrics doesn't exist
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - example.poconetes.dev
    secretName: example-tls
  rules:
  - host: example.poconetes.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: web-minimal
          servicePort: 8080
      - path: /metrics
        backend:
          serviceName: web-minimal
          servicePort: 8081
